Improvements / corections about layout, punctuation...

--- a/main.lyx
+++ b/main.lyx
@@ -189,6 +189,10 @@ mois et 1700
 \end_inset
 
 kilomètres.
+\begin_inset Newpage newpage
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
@@ -343,9 +347,9 @@ kilomètres -- des sacs de, respectivement, 14
 \end_inset
 
 kilos pour Marie et 22 pour moi.
- Hum ! ça se porte, ça s'endure, mais ça n'est pas malin, puisque cette
- lourdeur provoque des maux bien réels (et dangereux) : fragilisation accrue
- des chevilles, des genoux et du dos.
+ Ça se porte, ça s'endure, mais ça n'est pas malin, puisque cette lourdeur
+ provoque des maux bien réels (et dangereux) : fragilisation accrue des
+ chevilles, des genoux et du dos.
  Au bout de 4
 \begin_inset space ~
 \end_inset
@@ -481,7 +485,7 @@ Cette première semaine de traversée ardéchoise aura été un petit voyage
  en soi : nous remplissant les yeux et la tête ; nous fatiguant et nous
  endurcissant le corps ; nous apprenant la marche au long cours et le voyage
  en autonomie.
- Mais il y encore du boulot.
+ Mais il y a encore du boulot.
  Chouette ! Elle fut d'excellentes prémices, à travers une Ardèche qui vaut
  -- je vous l'assure -- ses larges coups d'yeux.
  Allez-y ! Nous, nous y retournerons.
@@ -669,7 +673,7 @@ avril
 \begin_inset space ~
 \end_inset
 
-2011.
+2011
 \shape smallcaps
 \emph default
 
@@ -710,7 +714,7 @@ avril
 \begin_inset space ~
 \end_inset
 
-2011.
+2011
 \emph default
 
 \begin_inset Newline newline
@@ -718,8 +722,8 @@ avril
 
 Deux semaines déjà.
  À pagayer, sans surprise.
- Mais beaucoup, aussi, à pousser, tirer, lever, rouler ; les pieds dans
- l'eau trop souvent, le cul mouillé parfois.
+ Mais beaucoup aussi à pousser, tirer, lever, rouler ; les pieds dans l'eau
+ trop souvent, le cul mouillé parfois.
  Et nous galérons, maudissant cette Loire.
  En ce début d'année, mes amis : pas de neige, pas de pluie.
  Alors, pas d'eau non plus.
@@ -757,29 +761,8 @@ Qu'est-ce qu'un kayak pliant ?
 \end_inset
 
  me demanderez-vous.
- Un kayak est une embarcation à propulsion humaine
-\begin_inset Foot
-status collapsed
-
-\begin_layout Plain Layout
-On peut lui adjoindre une voile ; et même un (petit) moteur.
-\end_layout
-
-\end_inset
-
-, assez plate, dans laquelle on se tient à fleur d'eau et que l'on manie
- généralement à la pagaie double
-\begin_inset Foot
-status collapsed
-
-\begin_layout Plain Layout
-Contrairement à un canoë qui est : plus large, plus haut, dans lequel on
- se tient haut, et que l'on manie généralement à la pagaie simple.
-\end_layout
-
-\end_inset
-
-.
+ Un kayak est une embarcation à propulsion humaine, assez plate, dans laquelle
+ on se tient à fleur d'eau et que l'on manie généralement à la pagaie double.
  Le concept du kayak pliant est allemand et est apparu durant 
 \begin_inset Quotes fld
 \end_inset
@@ -860,14 +843,14 @@ totale
 \end_layout
 
 \begin_layout Standard
-Telle fut la première journée d'une navigation qui devait en compter --
- encore -- une cinquantaine.
+Telle fut la première journée d'une navigation qui devait en compter, encore,
+ une cinquantaine.
  Puis vinrent les deux suivantes : égales.
- L'attention étirée -- de bout en bout de la journée -- à son maximum :
- apprendre à lire les remous ; repérer les rochers dangereux ; la pagaie
- à gauche, à droite, en avant, en arrière ; sauter les deux pieds dans l'eau
- caillouteuse, poussant et tirant le kayak, gueulant parfois ; pour enfin
- constater les dégâts, barres en bois fracassées et entailles dans sa peau.
+ L'attention étirée, de bout en bout de la journée, à son maximum : apprendre
+ à lire les remous ; repérer les rochers dangereux ; la pagaie à gauche,
+ à droite, en avant, en arrière ; sauter les deux pieds dans l'eau caillouteuse,
+ poussant et tirant le kayak, gueulant parfois ; pour enfin constater les
+ dégâts, barres en bois fracassées et entailles dans sa peau.
  Que la journée s'arrête ! Ouf, mais transis de froid.
  En trois jours, nous aurons pagayé 13
 \begin_inset space ~
@@ -881,19 +864,22 @@ kilomètres, de Retournac à Aurec\SpecialChar \nobreakdash-
 sur\SpecialChar \nobreakdash-
 Loire.
  Cela semble peu ; mais nous savons, nous, que ça n'est pas si mal.
-\end_layout
-
-\begin_layout Standard
-Relativisons cette torture, tout de même.
- Car nous y aurons pris -- dans ces gorges de Haute\SpecialChar \nobreakdash-
-Loire -- notre pied !
- La navigation était sportive et chouette ; les paysages sauvages et magnifiques
+ Relativisons cette torture, tout de même.
+ Car nous y aurons pris, dans ces gorges de Haute\SpecialChar \nobreakdash-
+Loire, notre pied ! La
+ navigation était sportive et chouette ; les paysages sauvages et magnifiques
  ; et la faune commençait à se montrer à nous.
 \end_layout
 
 \begin_layout Standard
 Les jours suivants continuèrent largement notre formation d'aventuriers
  et balayèrent amplement deux croyances : une populaire et une personnelle.
+\shape smallcaps
+
+\begin_inset VSpace bigskip
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
@@ -907,15 +893,15 @@ sauvage
 \begin_inset Quotes frd
 \end_inset
 
-, ce voyage a -- à de nombreuses reprises et sous des angles de vues divers
- -- balayé de nos têtes cette croyance.
+, ce voyage a (à de nombreuses reprises et sous des angles de vues divers)
+ balayé de nos têtes cette croyance.
  Certes, la Loire est un fleuve magnifique à bien des égards.
- Et en bien des endroits, elle y paraît sauvage, et on s'y sent allègrement
+ Et en bien des endroits, elle y paraît sauvage et on s'y sent allègrement
  solitaire.
-\begin_inset Newline newline
-\end_inset
+\end_layout
 
-Mais, face à deux gigantesques barrages, véritables murs de bétons : qui,
+\begin_layout Standard
+Mais face à deux gigantesques barrages, véritables murs de bétons : qui,
  en quelques pas, transforment un 
 \begin_inset Quotes fld
 \end_inset
@@ -942,24 +928,30 @@ rikiki
 
  ; qui créent de belles zones de plaisances humaines ; qui modulent une
  navigation à coups de lâchés d'eau...
-\begin_inset Newline newline
-\end_inset
+\end_layout
 
-Mais, lorsqu'à chaque instant, en chaque endroit (même les plus reculés),
- la présence humaine se fait sentir -- de manières utiles parfois et souvent
- nauséabondes -- modelant le fleuve et ses rives : les nombreux ponts, et
- les blocs en vrac à leurs pieds ; les chemins de fer discrets ; les routes
- petites et calmes, ou grandes et bruyantes ; les fils électriques et leurs
+\begin_layout Standard
+Mais lorsqu'à chaque instant, en chaque endroit (même les plus reculés),
+ la présence humaine se fait sentir, de manières utiles parfois et souvent
+ nauséabondes, modelant le fleuve et ses rives : les nombreux ponts et les
+ blocs en vrac à leurs pieds ; les chemins de fer discrets ; les routes
+ petites et calmes ou grandes et bruyantes ; les fils électriques et leurs
  pylônes, passant d'un bout à l'autre de tout panorama ; les jolis villages,
  anciens ou plus neufs ; quelques châteaux posés de manière ahurissante,
  pour raisons stratégiques ; de trop nombreuses maisons plantées au beau
- milieu d'un magnifique n'importe où, qui n'ont rien à y foutre ! ; et puis,
+ milieu d'un magnifique n'importe où, qui n'ont rien à y foutre ; et puis,
  invariablement, les déchets de l'homme !
-\begin_inset Newline newline
+\end_layout
+
+\begin_layout Standard
+Mais non ! La Loire n'est pas un fleuve sauvage.
+ Elle est le serf et la poubelle de l'humain.
+\shape smallcaps
+
+\begin_inset VSpace bigskip
 \end_inset
 
-Mais, non ! La Loire n'est pas un fleuve sauvage.
- Elle est le serf et la poubelle de l'humain.
+
 \end_layout
 
 \begin_layout Standard
@@ -968,9 +960,9 @@ La croyance individuelle, que ce périple a largement lessivée, est la suivante
  desquels nous avons fait pousser nos vingts premières années.
  Tout au plus, nous l'avions aperçue en quelques autres endroits -- de villes
  ou de châteaux -- où elle était, probablement, déjà bien large.
- Bien entendu, nous avions préparé ce voyage et savions -- tout de même
- -- dans quelle bassine d'eau nous mettions les pieds.
- Nous pensions -- pourtant et naïvement -- n'avoir que trois jours de Loire
+ Bien entendu, nous avions préparé ce voyage et savions, tout de même, dans
+ quelle bassine d'eau nous mettions les pieds.
+ Nous pensions, pourtant et naïvement, n'avoir que trois jours de Loire
  sportive, puis qu'elle deviendrait paisiblement navigable, ne nous réveillant
  que pour quelques difficultés très ponctuelles.
  Et à chaque passage délicat, nous nous disions que 
@@ -991,9 +983,9 @@ Mais elle s'est montrée à nous, franche.
 e que, oui, c'était aussi cette Loire là que nous étions venu chercher.
  Nous nous sommes détendus, nous avons porté une plus forte et une plus
  sereine attention à notre embarcation.
- Et alors, doucement, nous avons pris, avec plaisir, tous les emmerdes que
+ Et alors, doucement, nous avons pris avec plaisir tous les emmerdes que
  la Loire nous apportait sur son lit scintillant : embâcles de rochers ou
- d'arbres -- petits à gros -- et leurs remous -- gros à petits -- ; nombreuses
+ d'arbres -- petits à gros -- et leurs remous -- gros à petits ; nombreuses
  et larges gravières et sablières ; tapis de renoncules envahissantes ;
  et nombreux déchets humains.
 \shape smallcaps
@@ -1014,7 +1006,7 @@ Autant ne pas vous dire que ces quinze jours auront été remplis, à en débord
 \begin_layout Standard
 Tout le reste, il faut aussi en parler et l'écrire.
  Ce sont les longues journées à tirer un kayak, dans les cinq centimètres
- d'eau, du plus long fleuve de France ! C'est l'unique orage, le seul jour
+ d'eau du plus long fleuve de France ! C'est l'unique orage, le seul jour
  de pluie, d'un mois de baroude d'avril.
  C'est la multitude de piafs majestueux que nous avons observés et écoutés,
  avec un énorme plaisir.
@@ -1148,7 +1140,7 @@ ans de ça !
 
 , filant droit, face à un soleil couchant luisant vif sur la Loire.
  Collant nos tentes pour un bivouac commun sur une haute falaise sableuse,
- nous avons papoté de : nos projets, nos impressions, nos expériences...
+ nous avons papoté de nos projets, nos impressions, nos expériences...
 \end_layout
 
 \begin_layout Standard
@@ -1171,27 +1163,7 @@ kilomètres : nous pouvons tout nous permettre.
 \end_layout
 
 \begin_layout Standard
-
-\emph on
-Jeudi
-\begin_inset space ~
-\end_inset
-
-5
-\begin_inset space ~
-\end_inset
-
-mai
-\begin_inset space ~
-\end_inset
-
-2011.
-\emph default
-
-\begin_inset Newline newline
-\end_inset
-
-Réveil un peu frais, mais pas trop.
+Jeudi 5 mai, réveil un peu frais, mais pas trop.
  Effectivement, il est neuf heures.
  L'astre jaune ne nous a pas attendus pour se lever, réchauffant les cœurs
  et le paysage.
@@ -1220,74 +1192,17 @@ t égaux.
 
 \begin_layout Standard
 Le temps file ; le trait sur la carte avance bien, mine de rien.
-\begin_inset Newline newline
-\end_inset
-
-À notre quinzième jour de navigation, nous avions vu défiler -- au total
+ À notre quinzième jour de navigation, nous avions vu défiler -- au total
  -- 185
 \begin_inset space ~
 \end_inset
 
-kilomètres de Loire
-\begin_inset Foot
-status collapsed
-
-\begin_layout Plain Layout
-De Retournac à Digoin ; du mercredi
-\begin_inset space ~
-\end_inset
-
-13 au mercredi
-\begin_inset space ~
-\end_inset
-
-27
-\begin_inset space ~
-\end_inset
-
-avril.
-\end_layout
-
-\end_inset
-
-.
+kilomètres de Loire.
  Les 185
 \begin_inset space ~
 \end_inset
 
-suivants ont été avalés, eux, en une petite semaine
-\begin_inset Foot
-status open
-
-\begin_layout Plain Layout
-De Digoin à 5
-\begin_inset space \thinspace{}
-\end_inset
-
-km après Cosnes\SpecialChar \nobreakdash-
-sur\SpecialChar \nobreakdash-
-Loire ; du jeudi
-\begin_inset space ~
-\end_inset
-
-28
-\begin_inset space ~
-\end_inset
-
-avril au mercredi
-\begin_inset space ~
-\end_inset
-
-4
-\begin_inset space ~
-\end_inset
-
-mai.
-\end_layout
-
-\end_inset
-
-.
+suivants ont été avalés, eux, en une petite semaine.
  Période d'essai terminée, rendements doublés ! Logique, non ? Très logique.
  Car cette 
 \begin_inset Quotes fld
@@ -1381,6 +1296,10 @@ Nous étions cocasses à mugir et à piétiner dans cinq centimètres d'eau,
 Nous filons, désormais, à coups de pagaies lents et puissants, au travers
  de paysages bien différents de ceux des gorges de la Loire, nous laissant
  aller à la poésie...
+\begin_inset Newpage newpage
+\end_inset
+
+
 \end_layout
 
 \begin_layout Quote
@@ -1490,7 +1409,7 @@ Et nous ? Après Roanne, nous nous sommes apaisés, s'essayant à être un peu
 \begin_inset space ~
 \end_inset
 
-mai ; un jeudi.
+mai, un jeudi.
  Demain, vendredi
 \begin_inset space ~
 \end_inset
@@ -1599,14 +1518,14 @@ Tout ça, c'est une histoire de tracas, en fin de compte.
  Amboise.
  Leurs attraits : la beauté de leur vieillesse et, parfois, quelques chouettes
  remous sportifs.
- Leurs constantes de malheur : de grosses pierres pas commodes, sous leurs
+ Leurs constantes de malheur : de grosses pierres pas commodes sous leurs
  piliers et leurs arches ; des bouts de bois et de ferrailles ; des plaques
  dentées métalliques ; etc.
  La plaie des kayakistes et canoéistes.
 \end_layout
 
 \begin_layout Standard
-Hier, nous fûmes, de nouveau, face à l'un de ces vieux ponts.
+Hier, nous fûmes de nouveau face à l'un de ces vieux ponts.
  Le plus redouté, le plus sale, le plus dangereux probablement.
  Le pont Wilson de Tours.
  Nous le toisâmes longtemps, timidement, peureux des histoires que nous
@@ -1616,8 +1535,7 @@ Hier, nous fûmes, de nouveau, face à l'un de ces vieux ponts.
  Nous avions convenu -- tout de même -- qu'en toute sérénité nous ferions
  un portage à cet endroit, à ce Wilson, trop dangereux pour notre coque
  de bois.
- Mais moi, mué par un vilain orgueil, j'imaginai tout de même la passer,
- cette terreur.
+ Mais moi, mué par un vilain orgueil, j'imaginai la passer, cette terreur.
 \end_layout
 
 \begin_layout Quote
@@ -1825,7 +1743,7 @@ ième jour de repos.
 \begin_inset space ~
 \end_inset
 
-Lucé -- dernière demeure de feu le brillant Léonard
+Lucé, dernière demeure de feu le brillant Léonard
 \begin_inset space ~
 \end_inset
 
@@ -1833,7 +1751,7 @@ de
 \begin_inset space ~
 \end_inset
 
-Vinci -- et à la médiathèque -- repère à journaux et à BD.
+Vinci, et à la médiathèque, repère à journaux et à BD.
  Puis, les coups de pagaies se sont de nouveau déroulés ; nos bras forts
  et habitués s'en délassant.
 \end_layout
@@ -1869,7 +1787,10 @@ jours.
 \end_inset
 
 kilomètres par jour : tout paraît simple ou presque.
- Ce qui l'est : méditer et rêvasser, chaque jour, au cœur d'une belle nature
+\end_layout
+
+\begin_layout Standard
+Ce qui l'est : méditer et rêvasser, chaque jour, au cœur d'une belle nature
  ; vivre à notre rythme, du lever au coucher ; apprécier le soleil, la pluie,
  les nuages, les paysages ; observer et tenter de connaître, de comprendre,
  nos 
@@ -1881,9 +1802,12 @@ coloca-Terre
 \end_inset
 
  ; se marrer, Marie et moi, ensemble ; se baigner nus ; bivouaquer ; et
- faire les cons ! Ce qui est moins simple : régler notre agenda avec celui
- du monde civilisé, pour voir les copains, par-ci par-là ; s'aimer, parce
- que le voyage 
+ faire les cons !
+\end_layout
+
+\begin_layout Standard
+Ce qui est moins simple : régler notre agenda avec celui du monde civilisé,
+ pour voir les copains, par-ci par-là ; s'aimer, parce que le voyage 
 \begin_inset Quotes fld
 \end_inset
 
@@ -1896,14 +1820,14 @@ coloca-Terre
  pour naviguer sur son eau de sécheresse ; être aux portes de l'océan, au
  milieu de l'estuaire, et composer avec ses marées, ses vagues, son vent,
  sa vase, ses navires, sa force !
-\end_layout
+\begin_inset VSpace bigskip
+\end_inset
 
-\begin_layout Cul-de-lampe
 
 \end_layout
 
 \begin_layout Standard
-Nous voilà, désormais, le 28
+Nous voilà désormais le 28
 \begin_inset space ~
 \end_inset
 
@@ -1925,9 +1849,9 @@ Nazaire, où habitent
 Nous avons passé Amboise le 13, Tours le 14 et Saumur le 16.
  Les 17 et 18, nous étions aux abords d'Angers.
  Et les 20 et 21, nous étions à Nantes et sa périphérie.
- Nous y avons rencontré, dans cette ultime portion de Loire, -- pour une
- heure, une après-midi ou une nuit -- des amis et nos familles, certains
- pas vus depuis des années.
+ Nous y avons rencontré, dans cette ultime portion de Loire, pour une heure,
+ une après-midi ou une nuit, des amis et nos familles -- certains pas vus
+ depuis des années.
  Nos incursions, dans cette humanité connue, ont été franchement plaisantes.
  Mais les retours à la nature, à l'isolement humain, au vagabondage solitaire
  l'ont été davantage, et plus précieux, et plus puissants.
@@ -1994,8 +1918,8 @@ Mais poursuivons.
  pêche ou à voile, et les oiseaux marins par centaines ; enfin -- et avec
  une marée de plus en plus puissante -- la vase, les roselières et quelques
  échasses blanches.
- Nous rêvions en pagayant ; et pagayions pour continuer le rêve.
- Marie pensait au passé, de cette Loire et de ses hommes qui l'ont animée,
+ Nous rêvions en pagayant et pagayions pour continuer le rêve.
+ Marie pensait au passé de cette Loire et de ses hommes qui l'ont animée,
  par amour et pour l'argent.
  Elle reconstituait le siècle d'or des batelleries de Loire.
  Elle rêvait...
@@ -2030,10 +1954,7 @@ arrivée triomphale
 
 \begin_layout Standard
 J'essayerai de faire court et intense, autant que le fût cette arrivée.
-\end_layout
-
-\begin_layout Standard
-Le dimanche 22
+ Le dimanche 22
 \begin_inset space ~
 \end_inset
 
@@ -2135,9 +2056,17 @@ h
 
 30, sous une épaisse nappe de nuages, lorsque nos muscles s'enflammèrent,
  mus par une transe joyeuse.
- Flap flap, nos bras s'agitèrent.
- Flap flap, l'embarcation fila cap à l'ouest, aspirée par les débuts timides
- de la marée descendante.
+ 
+\emph on
+Flap flap
+\emph default
+, nos bras s'agitèrent.
+ 
+\emph on
+Flap flap
+\emph default
+, l'embarcation fila cap à l'ouest, aspirée par les débuts timides de la
+ marée descendante.
 \end_layout
 
 \begin_layout Standard
@@ -2181,7 +2110,7 @@ re s'approcha.
 \end_layout
 
 \begin_layout Standard
-Finalement, c'est au ras des roseaux et les jambes dans la vase, que nous
+Finalement, c'est au ras des roseaux et les jambes dans la vase que nous
  débarquâmes.
  Puis, après un dernier effort à tirer notre kayak dans un pré humide (aidés
  par le papa de Marie et ma maman), nous retrouvâmes nos familles autour
@@ -2222,7 +2151,11 @@ Cap à l'est !
 \align right
 
 \emph on
-Récit de l'entre-deux puis de Pontchâteau à Mézières-en-Brenne
+Récit de l'entre-deux
+\begin_inset Newline newline
+\end_inset
+
+puis de Pontchâteau à Mézières-en-Brenne
 \begin_inset Newline newline
 \end_inset
 
@@ -2342,7 +2275,9 @@ status collapsed
 Les adeptes de cet état d'esprit partent de quelques jours à plusieurs mois
  (à pied, en vélo, en kayak...), avec un barda complet, économique et surtout
  très léger.
- Pour en savoir plus : www.randonner-leger.org
+ Pour en savoir plus : 
+\emph on
+www.randonner-leger.org
 \end_layout
 
 \end_inset
@@ -2474,12 +2409,15 @@ Ainsi, nous avons pu : admirer les hérons cendrés, pourprés et garde-bœufs
  ; nous étonner du nombre de demeures bourgeoises angevines, admirant quelques
  unes majestueuses ; et subir les caprices d'une météo ci-douce, là-lourde,
  ci-pluvieuse et là-torride.
- Nous avons pu aussi : découvrir un petit pays gris d'ardoise et une vaste
+\end_layout
+
+\begin_layout Standard
+Nous avons pu aussi : découvrir un petit pays gris d'ardoise et une vaste
  contrée blanche de tuffeau ; envier la fraîcheur d'extravagantes caves
  et maisons troglodytes ; et nous émouvoir des regards de quelques biches,
  cerfs, chevreuils, sangliers et blaireaux.
- Enfin, nous avons entendu l'éveil d'un été aux grondements des moissonneuses
- batteuses, coupant les blés à la faveur des fins de jours ; et avons calmé
+ Enfin, nous avons entendu l'éveil d'un été aux grondements des moissonneuses-ba
+tteuses, coupant les blés à la faveur des fins de jours ; et avons calmé
  ses premières chaleurs à l'ombre de grandes forêts exploitées.
  Nous avons contemplé autant de couchers de soleil qu'il y eu de jours,
  quelques aurores aussi et quelques nuits étoilées.
@@ -2719,39 +2657,33 @@ Lieu se joue aussi une tragédie, dont les acteurs
  S'y trouvent de nombreuses espèces invasives (c'est à dire : des espèces
  exotiques à un milieu, introduites par l'homme
 \begin_inset Foot
-status collapsed
+status open
 
 \begin_layout Plain Layout
 Espèces introduites : volontairement ou non ; directement ou indirectement.
-\begin_inset Newline newline
-\end_inset
+\end_layout
 
+\begin_layout Plain Layout
 L'écrevisse de Louisiane a été introduite 
 \emph on
 volontairement
 \emph default
 , pour palier à la peste des écrevisses décimant les espèces locales.
-\begin_inset Newline newline
-\end_inset
-
-L'ibis sacré a été introduit 
+ L'ibis sacré a été introduit 
 \emph on
 involontairement
 \emph default
  : il s'est échappé d'un parc animalier...
-\begin_inset Newline newline
-\end_inset
+\end_layout
 
+\begin_layout Plain Layout
 Ces deux espèces, tout comme le ragondin, la jussie...
  ont été introduites 
 \emph on
 directement
 \emph default
  par l'homme.
-\begin_inset Newline newline
-\end_inset
-
-D'autres -- par exemple, le frelon asiatique -- l'ont été 
+ D'autres -- par exemple, le frelon asiatique -- l'ont été 
 \emph on
 indirectement
 \emph default
@@ -2800,13 +2732,6 @@ Le concombre nous maudit
 
 \emph on
 14 juin ; Mathieu
-\shape smallcaps
-\emph default
-
-\begin_inset VSpace smallskip
-\end_inset
-
-
 \end_layout
 
 \begin_layout Standard
@@ -2908,7 +2833,7 @@ Au sud de la Loire-Atlantique, au détour d'un chemin terreux, nous sommes
  Des centaines et des centaines, écrasés par leurs propres pères producteurs,
  parce qu'une peur hystérique s'était emparée des consommateurs.
  Ont-ils eu l'effroi, tout d'un coup, de mourir d'un concombre ? Qu'ils
- se rassurent ; ils s'empoisonnent bien assez, chaque jour ! Nous qui en
+ se rassurent ; ils s'empoisonnent bien assez chaque jour ! Nous qui en
  mangions très peu, nous en avons ramassé deux, encore vivants.
  Ils furent bons, ne nous provoquant ni diarrhée ni mort subite.
 \end_layout
@@ -2936,14 +2861,9 @@ Association pour le Maintien d'une Agriculture Paysanne
 \end_inset
 
 .
-\begin_inset Newline newline
-\end_inset
-
-Voir par exemple le site Web 
+ Voir par exemple le site web 
 \emph on
-miramap.org
-\emph default
- .
+www.reseau-amap.org
 \end_layout
 
 \end_inset
@@ -3245,8 +3165,8 @@ Nos chemins de liberté
 \align right
 
 \emph on
-Ce texte impressionniste, écrit en juillet et août 2011, évoque notre changement
- de cap, moment capital de ce voyage
+Ce texte, écrit en juillet et août 2011, évoque notre changement de cap,
+ moment capital de ce voyage
 \shape smallcaps
 \emph default
 .
@@ -3384,7 +3304,7 @@ Parfois, au gré des kilomètres et de quelques rencontres, émergent -- pouf,
 
 \begin_layout Standard
 Trois semaines auparavant, le 22 juin, sur les bords de Loire, dans les
- faubourgs de Saumur -- ville de bulles et de chevaux --, un joyeux trublion
+ faubourgs de Saumur (ville de bulles et de chevaux), un joyeux trublion
  nous offrit cette folie.
 \end_layout
 
@@ -3404,9 +3324,8 @@ ans et des moustaches ; des mollets et un cœur gros comme la liberté ; l'ivres
 \begin_layout Standard
 Je crois que mon tableau est clair : ce petit homme nous a fait rire et
  nous a plu.
- La rencontre fut brève -- le temps d'un dîner et d'un petit-déj -- mais
- qu'elle fut joyeuse et intense -- presque autant que ses ronflements d'une
- nuit.
+ La rencontre fut brève, le temps d'un dîner et d'un petit déj, mais qu'elle
+ fut joyeuse et intense, presque autant que ses ronflements d'une nuit.
  Le bougre eu tôt fait de reprendre sa route zigzag et de se trouver une
  belle place dans nos têtes.
 \begin_inset VSpace bigskip
@@ -3440,8 +3359,12 @@ Mais le bon Francis, son souvenir et sa moustache eurent le bon goût de
 \end_layout
 
 \begin_layout Standard
+\noindent
 Un autre mois, plus dix jours.
- Les marcheurs tiennent la route !
+\begin_inset Newline newline
+\end_inset
+
+Les marcheurs tiennent la route !
 \end_layout
 
 \begin_layout Standard
@@ -3639,10 +3562,7 @@ Maison du Parc
 
 \begin_layout Standard
 Ceci fut un avant-goût de la Brenne ; nous n'avons pas pu tout y découvrir.
-\end_layout
-
-\begin_layout Standard
-Si, comme nous, vous aimez le tourisme tranquille et observer la nature,
+ Si, comme nous, vous aimez le tourisme tranquille et observer la nature,
  n'hésitez pas.
  Il y a, en Brenne, de quoi vous faire plaisir.
  Nous y retournerons, et peu importe la saison, car la Brenne semble toujours
@@ -3701,9 +3621,9 @@ clic-clac
  Je perdais toujours les jeux d'ombres et de lumières des entremêlements
  de nuages, ou les contrastes et la profondeur des immenses forêts.
  Rien de bon, donc, à vous proposer.
-\end_layout
+\begin_inset Newpage newpage
+\end_inset
 
-\begin_layout Cul-de-lampe
 
 \end_layout
 
@@ -3783,7 +3703,10 @@ Laissons maintenant cette nature, ses tons et ses couleurs, et braquons
  Le beau et l'affreux se subliment.
 \end_layout
 
-\begin_layout Cul-de-lampe
+\begin_layout Standard
+\begin_inset VSpace bigskip
+\end_inset
+
 
 \end_layout
 
@@ -3820,7 +3743,7 @@ juillet
 \begin_inset space ~
 \end_inset
 
-2011 - 15
+2011 -- 15
 \begin_inset space \thinspace{}
 \end_inset
 
@@ -3896,7 +3819,10 @@ t de dépoussiérer (le PNR de Millevaches l'entretient, aidé de nos contributi
  On dit, d'ailleurs, que les jeunes éleveurs de brebis y seraient les bienvenus...
 \end_layout
 
-\begin_layout Cul-de-lampe
+\begin_layout Standard
+\begin_inset VSpace bigskip
+\end_inset
+
 
 \end_layout
 
@@ -4191,7 +4117,11 @@ Anniversaire auvergnat
 \align right
 
 \emph on
-Découverte de l'Auvergne, de Saint-Ours à Saint-Flour ; 1 au 15 août ; 212
+Découverte de l'Auvergne, de Saint-Ours à Saint-Flour
+\begin_inset Newline newline
+\end_inset
+
+1 au 15 août ; 212
 \begin_inset space \thinspace{}
 \end_inset
 
@@ -4358,11 +4288,6 @@ Mathieu a passé un merveilleux anniversaire ; et, finalement, il n’était
  pas seul avec moi.
  Car ce sont les cœurs d’une belle diversité humaine qui se sont offerts
  à lui.
-\end_layout
-
-\begin_layout Standard
-Nous voici à Saint-Flour, en limite de Cantal, pour y découvrir nos prochains
- itinéraires.
 \end_layout
 
 \begin_layout Section*
@@ -4971,8 +4896,11 @@ Portrait d'un Sud
 \align right
 
 \emph on
-Récit de Valleraugue aux Saintes-Marie-de-la-Mer ; 28 août au 5 septembre
- ; 112
+Récit de Valleraugue aux Saintes-Marie-de-la-Mer
+\begin_inset Newline newline
+\end_inset
+
+28 août au 5 septembre ; 112
 \begin_inset space \thinspace{}
 \end_inset
 
@@ -5027,7 +4955,7 @@ marches
 \begin_inset Quotes frd
 \end_inset
 
- : très belle randonnée, entre Valleraugues et le mont Aigoual, de 1200
+ : très belle randonnée, entre Valleraugue et le mont Aigoual, de 1200
 \begin_inset space \thinspace{}
 \end_inset
 
@@ -5169,8 +5097,7 @@ La Camargue nous montra, aussi, ses troupeaux de taureaux noirs et ses chevaux
 \end_layout
 
 \begin_layout Standard
-Nous pressentions que cette Camargue n'était pas faite pour les marcheurs
- -- ni de grands chemins, ni de petits non plus.
+Nous pressentions que cette Camargue n'était pas faite pour les marcheurs.
  Le premier jour en son sein confirma, la carte d'état-major aussi.
  Ferions-nous, en deux jours, 40
 \begin_inset space ~
@@ -5200,8 +5127,8 @@ es sur la plage (lisant et écrivant) et nous baignâmes dans la chaude eau
  méditerranéenne.
  L'expérience fut piquante pour notre orgueil de marcheur, mais ouvrit de
  folles perspectives de voyages.
- Et pour nous consoler, les flamants roses nous offrirent -- nombreux sur
- l'eau et dans les airs -- un joli spectacle au coucher du soleil.
+ Et pour nous consoler, les flamants roses nous offrirent, nombreux sur
+ l'eau et dans les airs, un joli spectacle au coucher du soleil.
 \end_layout
 
 \begin_layout Section*
@@ -5250,12 +5177,17 @@ Les journées de septembre se mirent à tomber, l'une après l'autre.
  longtemps, et qui s'apprêtaient à sortir de cage...
 \end_layout
 
-\begin_layout Cul-de-lampe
+\begin_layout Standard
+\begin_inset VSpace bigskip
+\end_inset
+
 
 \end_layout
 
 \begin_layout Standard
 \noindent
+
+\emph on
 11
 \begin_inset space ~
 \end_inset
@@ -5265,6 +5197,8 @@ septembre
 \end_inset
 
 2011.
+
+\emph default
  Lubéron.
  La chasse au petit gibier est ouverte.
 \begin_inset VSpace medskip
@@ -5883,10 +5817,7 @@ Le bon Francis -- notre rencontre saumuroise devenue objectif de voyage
  pour y bivouaquer.
  Mais la Côte d'Azur n'est pas la Creuse.
  L'urbanisation y est très forte ; le moindre lopin de terre est un trésor.
-\end_layout
-
-\begin_layout Standard
-Après un tour de tramway et de bus, puis une marche à l'affût d'une terre
+ Après un tour de tramway et de bus, puis une marche à l'affût d'une terre
  vierge, nous nous résignons à planter sur un terrain douteux, bossu et
  pentu, entouré de roseaux et de maisons à la niçoise.
  À seulement 50 mètres de l'ami Francis, nous installons notre dernier bivouac
@@ -5918,7 +5849,8 @@ Au-delà du voyage
 Je voyage dans les nuages
 \end_layout
 
-\begin_layout Verse
+\begin_layout Standard
+\noindent
 Lorsque je suis au ras du sol,
 \begin_inset Newline newline
 \end_inset
@@ -5938,7 +5870,8 @@ Je lève les yeux, qu'ils embrassent le ciel.
 
 \end_layout
 
-\begin_layout Verse
+\begin_layout Standard
+\noindent
 Alors, si quelques nuages voguent au dessus,
 \begin_inset Newline newline
 \end_inset
@@ -5958,7 +5891,8 @@ Et qu'il voyage où mes yeux ne peuvent aller.
 
 \end_layout
 
-\begin_layout Verse
+\begin_layout Standard
+\noindent
 Mâchant leur cul et leur bout de nez,
 \begin_inset Newline newline
 \end_inset
@@ -5986,7 +5920,8 @@ Sans que jamais mon corps n'ait à quitter son ici.
 
 \end_layout
 
-\begin_layout Verse
+\begin_layout Standard
+\noindent
 Lorsque mes yeux se lèvent de terre,
 \begin_inset Newline newline
 \end_inset
@@ -6022,7 +5957,8 @@ Pour exister au delà de mon horizon nu.
 
 \end_layout
 
-\begin_layout Verse
+\begin_layout Standard
+\noindent
 En somme, je voyage dans les nuages.
 \end_layout
 
@@ -6216,12 +6152,11 @@ Ce voyage, nous l'avons vécu au plus proche de dame Nature.
 \end_layout
 
 \begin_layout Standard
-Pour finir, illustrons cette rétrospective hygiénique par quelques moments
- cocasses.
+Pour finir, illustrons cette rétrospective hygiénique par deux moments cocasses.
 \end_layout
 
-\begin_layout Subsection*
-Lavage nudiste interrompu par deux randonneurs
+\begin_layout Subsubsection*
+Toilette naturiste interrompue
 \end_layout
 
 \begin_layout Standard
@@ -6278,7 +6213,7 @@ centimètres d'eau.
  ridicules, nous nous détendîmes, les saluâmes et nous remîmes à nos affaires.
 \end_layout
 
-\begin_layout Subsection*
+\begin_layout Subsubsection*
 Toilette champêtre
 \end_layout
 
@@ -6333,7 +6268,11 @@ Gastronomie de grands chemins
 \align right
 
 \shape italic
-Six mois d'un beau voyage : ça nourrit la tête mais guère l'estomac.
+Six mois d'un beau voyage
+\begin_inset Newline newline
+\end_inset
+
+Ça nourrit la tête mais guère l'estomac
 \shape smallcaps
 
 \begin_inset VSpace smallskip
@@ -6346,9 +6285,16 @@ Six mois d'un beau voyage : ça nourrit la tête mais guère l'estomac.
 Avant de vous dévoiler nos usages gastronomiques, veuillez répondre à ce
  mini-quizz.
  Que sommes-nous devenus au terme de six mois de quasi-ermitage ?
+\shape smallcaps
+
+\begin_inset VSpace smallskip
+\end_inset
+
+
 \end_layout
 
-\begin_layout Quote
+\begin_layout Standard
+\noindent
 
 \emph on
 Réponse A :
@@ -6378,6 +6324,12 @@ Réponse C :
 Réponse D :
 \emph default
  des sportifs de haut niveau au régime strict ?
+\shape smallcaps
+
+\begin_inset VSpace smallskip
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
@@ -6435,7 +6387,7 @@ descente de Loire
 kilos.
  Ce n'est pourtant pas faute d'efforts pour les garder.
  Devait-il pagayer un chouïa plus, sans doute...
-\begin_inset VSpace bigskip
+\begin_inset Newpage newpage
 \end_inset
 
 
@@ -6454,10 +6406,7 @@ Des chasseurs-cueilleurs-voleurs de poules
 La chasse ? Très peu pour nous.
  Les lièvres et autres gibiers, c'est dans notre appareil photo que nous
  aimons les avoir.
-\end_layout
-
-\begin_layout Standard
-La cueillette ? Déjà un peu plus.
+ La cueillette ? Déjà un peu plus.
  Nous avons, en effet, dégusté quelques mets sauvages et chapardé dans les
  vergers, vignes et autres champs.
  Mais jamais aucun gallinacé.
@@ -6518,9 +6467,9 @@ Que non ! Fromage, saucisson, sardines à l'huile, bonbons et biscuits trop
 
 fois par jour ou la préparation de bonnes platées de féculents sont, probablemen
 t, nos seules coutumes culinaires communes.
-\end_layout
+\begin_inset Newpage newpage
+\end_inset
 
-\begin_layout Cul-de-lampe
 
 \end_layout
 
@@ -6915,7 +6864,10 @@ Perdue en forêt
 
 \emph on
 Conte pour enfants, écrit par Mathieu.
- Inspiré par les forêts de Creuse,
+\begin_inset Newline newline
+\end_inset
+
+Inspiré par les forêts de Creuse,
 \begin_inset Newline newline
 \end_inset
 
@@ -6930,7 +6882,7 @@ ce texte prit forme sur les bords du lac de Vassivière.
 
 \end_layout
 
-\begin_layout Subsection*
+\begin_layout Subsubsection*
 Kim est perdue
 \end_layout
 
@@ -6957,7 +6909,7 @@ Et perdue, elle l’est bien ! Tout au milieu d’une large et longue forêt.
  Il ne lui reste plus que le troisième : retrouver son chemin.
 \end_layout
 
-\begin_layout Subsection*
+\begin_layout Subsubsection*
 Son papa
 \end_layout
 
@@ -6989,7 +6941,7 @@ Premier indice : au bout du chemin qu’elle doit retrouver, il devrait y
  Et elle s’en réjouit.
 \end_layout
 
-\begin_layout Subsection*
+\begin_layout Subsubsection*
 Le siffleur des bois
 \end_layout
 
@@ -7053,7 +7005,7 @@ Pîiik Pîiik
 , ça recommence.
 \end_layout
 
-\begin_layout Subsection*
+\begin_layout Subsubsection*
 L’océan tout proche
 \end_layout
 
@@ -7118,7 +7070,7 @@ Troisième indice : au bout du chemin, il devrait y avoir son papa qu’elle
  proche.
 \end_layout
 
-\begin_layout Subsection*
+\begin_layout Subsubsection*
 Au bout du chemin
 \end_layout
 
@@ -7149,7 +7101,7 @@ Elle avance ainsi longtemps, traînant des sandales.
  plus vif, le vent frais sur ses joues chaudes.
 \end_layout
 
-\begin_layout Subsection*
+\begin_layout Subsubsection*
 Le grand pin et l’océan
 \end_layout
 
@@ -7168,16 +7120,13 @@ Kim en fait le tour, une fois, puis deux, puis trois.
  Et l’inconnu, siffleur des bois, ne siffle plus.
  Kim se retrouve encore seule.
  Elle se retrouve encore perdue.
-\end_layout
-
-\begin_layout Standard
-Des larmes finissent alors par couler, le long de ses joues, jusqu’à ses
+ Des larmes finissent alors par couler, le long de ses joues, jusqu’à ses
  pieds.
  Kim se blottit contre l’immense pin et son écorce rugueuse.
  Elle pleure, elle pleure.
 \end_layout
 
-\begin_layout Subsection*
+\begin_layout Subsubsection*
 Le siffleur fuyard
 \end_layout
 
@@ -7224,7 +7173,7 @@ Encore quelques secondes puis, dans un grand mouvement, le siffleur disparaît
  Jusqu’à se perdre dans les flots vifs du soleil couchant.
 \end_layout
 
-\begin_layout Subsection*
+\begin_layout Subsubsection*
 Un nouvel inconnu
 \end_layout
 
@@ -7267,7 +7216,7 @@ Kim Pîiik ? Pîiik Kim ?
  apeuré.
 \end_layout
 
-\begin_layout Subsection*
+\begin_layout Subsubsection*
 Les retrouvailles
 \end_layout
 
